--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -42,7 +42,7 @@
 .title {
   margin: 0;
   line-height: 1.15;
-  font-size: 4rem;
+  font-size: 3rem;
 }
 
 .title,
@@ -51,7 +51,7 @@
 }
 
 .description {
-  margin: 4rem 0;
+  margin: 2rem 0;
   line-height: 1.5;
   font-size: 1.5rem;
 }
@@ -66,15 +66,18 @@
 }
 
 .grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
+  max-width: 700px;
+
+  display: grid;
+
+  grid-template-columns: repeat(2, 1fr);
+  grid-auto-rows: 1fr;
+
+  grid-column-gap: 1rem;
+  grid-row-gap: 1rem;
 }
 
 .card {
-  margin: 1rem;
   padding: 1.5rem;
   text-align: left;
   color: inherit;
@@ -82,14 +85,46 @@
   border: 1px solid #eaeaea;
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
+
+  display: flex;
+
+  flex-direction: column;
+  justify-content: center;
 }
 
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
+.qify:hover,
+.qify:focus,
+.qify:active {
+  color: #27c975;
+  border-color: #27c975;
+}
+
+.ms_setting:hover,
+.ms_setting:focus,
+.ms_setting:active {
+  color: #0078d7;
+  border-color: #0078d7;
+}
+
+.drunkeen:hover,
+.drunkeen:focus,
+.drunkeen:active {
+  color: #ff6b6b;
+  border-color: #ff6b6b;
+}
+
+.qrgen:hover,
+.qrgen:focus,
+.qrgen:active {
+  color: #dea584;
+  border-color: #dea584;
+}
+
+.goldr:hover,
+.goldr:focus,
+.goldr:active {
+  color: #5271ff;
+  border-color: #5271ff;
 }
 
 .card h2 {
@@ -110,7 +145,20 @@
 
 @media (max-width: 600px) {
   .grid {
-    width: 100%;
-    flex-direction: column;
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .title {
+    font-size: 2rem;
+  }
+
+  .description {
+    font-size: 1.1rem;
+    margin: 1rem 0;
+  }
+
+  .code {
+    padding: 0.5rem;
+    font-size: 0.9rem;
   }
 }
